Always return at least one parity region.  Fixes PR#44239. Fix from oster@, code (such as it is) by me.